# PortalEscrow

./: .gitignore  Cargo.toml  README.md  vercel.json
app/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/public/docs/: credits.md
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/app/: page.tsx
app/src/app/architecture/: page.tsx
app/src/app/escrow/[id]/: page.tsx
app/src/components/: EventFeed.tsx  PortalProvider.tsx  StatusBadge.tsx  WalletBar.tsx
app/src/contracts/: portal_escrow.json
app/src/lib/: config.ts  contractMetadata.ts  demoData.ts  format.ts  types.ts  usePortalEscrow.ts
contracts/portal-escrow/: Cargo.toml
contracts/portal-escrow/src/: lib.rs
docs/: architecture.md  demo-script.md  devpost-copy.md  judging-hook.md  setup-portaldot.md
docs/contracts/: portal_escrow.contract  portal_escrow.wasm
scripts/: deploy-portaldot.py  deploy-portaldot.sh
